fix: aligning missing text

--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -3,7 +3,9 @@ footer{
     height: 60px;
     width: 100%;
     text-align: center;
-    position: fixed;
+    position: absolute;
     bottom: 0;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
